fix : accessibility issue due to background and colors do not have a sufficient contrast ratio

--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -38,7 +38,7 @@
 .table__content--no-employee {
   text-align: center;
   font-weight: bold;
-  color: #888;
+  color: #323232;
 }
 
 @media screen and (max-width: 900px) {
